tests/expectations/parser/functions/mut_input_fail.out
Error [EPAR0370005]: expected : -- found 'a'
    --> test:3:20
     |
   3 |     function f(mut a: u8) {}}
     |                    ^